[gd_scene load_steps=8 format=3 uid="uid://bdyqluc1cfnb8"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1_77ssq"]
[ext_resource type="Texture2D" uid="uid://dve4ik6nav6mk" path="res://sprites/arrow.png" id="3_8h1ks"]
[ext_resource type="Script" path="res://scripts/menu/discussSettingArrow.gd" id="4_flmkl"]
[ext_resource type="Script" path="res://scripts/menu/voteSettingArrow.gd" id="4_ntwn2"]

[sub_resource type="FontVariation" id="FontVariation_jeu8t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srou7"]
size = Vector2(40, 40)

[sub_resource type="Theme" id="Theme_1foon"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Main Menu" type="Node2D" parent="."]
script = ExtResource("1_77ssq")

[node name="Menu" type="CanvasLayer" parent="Main Menu"]

[node name="Title" type="Label" parent="Main Menu/Menu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -410.0
offset_top = 66.0
offset_right = 410.0
offset_bottom = 149.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Would You Press The Button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="Main Menu/Menu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 141.0
offset_right = 67.5
offset_bottom = 196.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Special"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingButton" type="Button" parent="Main Menu/Menu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 240.0
offset_right = 125.0
offset_bottom = 310.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Play"

[node name="Instructions" type="Button" parent="Main Menu/Menu"]
custom_minimum_size = Vector2(250, 70)
offset_left = 451.0
offset_top = 336.0
offset_right = 701.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 35
text = "Instructions"

[node name="Credits Button" type="Button" parent="Main Menu/Menu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 435.0
offset_right = 125.0
offset_bottom = 505.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Credits"

[node name="5Players" type="Label" parent="Main Menu/Menu"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -111.0
offset_right = 103.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "5+ players required"
horizontal_alignment = 1

[node name="Settings" type="CanvasLayer" parent="Main Menu"]
visible = false

[node name="Background" type="ColorRect" parent="Main Menu/Settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -250.0
offset_right = 460.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.443137, 0.639216, 0.721569, 1)

[node name="BackButton" type="Button" parent="Main Menu/Settings"]
offset_left = 165.0
offset_top = 105.0
offset_right = 285.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="DiscussionTime" type="Label" parent="Main Menu/Settings"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_top = 157.0
offset_right = 116.5
offset_bottom = 199.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_jeu8t")
theme_override_font_sizes/font_size = 30
text = "Discussion Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time text" type="Label" parent="Main Menu/Settings/DiscussionTime"]
layout_mode = 0
offset_left = 70.0
offset_top = 47.0
offset_right = 160.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 35
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="decrease" type="Sprite2D" parent="Main Menu/Settings/DiscussionTime"]
position = Vector2(60, 70)
rotation = 3.14159
texture = ExtResource("3_8h1ks")
script = ExtResource("4_flmkl")
change = -1

[node name="Area2D" type="Area2D" parent="Main Menu/Settings/DiscussionTime/decrease"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main Menu/Settings/DiscussionTime/decrease/Area2D"]
shape = SubResource("RectangleShape2D_srou7")

[node name="increase" type="Sprite2D" parent="Main Menu/Settings/DiscussionTime"]
position = Vector2(180, 70)
texture = ExtResource("3_8h1ks")
script = ExtResource("4_flmkl")
change = 1

[node name="Area2D" type="Area2D" parent="Main Menu/Settings/DiscussionTime/increase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main Menu/Settings/DiscussionTime/increase/Area2D"]
shape = SubResource("RectangleShape2D_srou7")

[node name="VotingTime" type="Label" parent="Main Menu/Settings"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.5
offset_top = 306.0
offset_right = 112.5
offset_bottom = 348.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Voting Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time text" type="Label" parent="Main Menu/Settings/VotingTime"]
layout_mode = 0
offset_left = 70.0
offset_top = 47.0
offset_right = 160.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 35
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="decrease" type="Sprite2D" parent="Main Menu/Settings/VotingTime"]
position = Vector2(60, 70)
rotation = 3.14159
texture = ExtResource("3_8h1ks")
script = ExtResource("4_ntwn2")
change = -1

[node name="Area2D" type="Area2D" parent="Main Menu/Settings/VotingTime/decrease"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main Menu/Settings/VotingTime/decrease/Area2D"]
shape = SubResource("RectangleShape2D_srou7")

[node name="increase" type="Sprite2D" parent="Main Menu/Settings/VotingTime"]
position = Vector2(180, 70)
texture = ExtResource("3_8h1ks")
script = ExtResource("4_ntwn2")
change = 1

[node name="Area2D" type="Area2D" parent="Main Menu/Settings/VotingTime/increase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main Menu/Settings/VotingTime/increase/Area2D"]
shape = SubResource("RectangleShape2D_srou7")

[node name="NumPlayers" type="Label" parent="Main Menu/Settings"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 174.0
offset_top = 118.0
offset_right = 399.0
offset_bottom = 173.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Main Menu/Settings/NumPlayers"]
layout_mode = 0
offset_left = -12.0
offset_top = 59.0
offset_right = 248.0
offset_bottom = 409.0
theme = SubResource("Theme_1foon")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/Settings/NumPlayers/ScrollContainer"]
layout_mode = 2

[node name="Line" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line2" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line3" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line4" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line5" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line6" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line7" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line8" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line9" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line10" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line11" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Line12" type="LineEdit" parent="Main Menu/Settings/NumPlayers/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 35)
layout_mode = 2
placeholder_text = "BLAH BLAH"
max_length = 20
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Warning" type="Label" parent="Main Menu/Settings/NumPlayers"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 414.0
offset_right = 213.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "duplicate name found"

[node name="PlayButton" type="Button" parent="Main Menu/Settings"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -193.0
offset_right = 100.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "PLAY"

[node name="Instructions" type="CanvasLayer" parent="Main Menu"]
visible = false

[node name="Background" type="ColorRect" parent="Main Menu/Instructions"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -250.0
offset_right = 460.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.443137, 0.639216, 0.721569, 1)

[node name="BackButton" type="Button" parent="Main Menu/Instructions"]
offset_left = 165.0
offset_top = 105.0
offset_right = 285.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="Title" type="Label" parent="Main Menu/Instructions"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 115.0
offset_right = 114.5
offset_bottom = 170.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "How to play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="ColorRect" parent="Main Menu/Instructions"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -137.0
offset_right = 410.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="text" type="Label" parent="Main Menu/Instructions/instructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.5
offset_top = -137.0
offset_right = 398.5
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "First a choice will be displayed.
Next, one player will be assigned the task of arguing to the other players why they SHOULD press the button, while another player will argue why they should NOT press the button.
Points will be awarded to players based on how many people votes for their side.
Each player will get one turn advocating the prompt and one turn opposing it."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Credits" type="CanvasLayer" parent="Main Menu"]
visible = false

[node name="Background" type="ColorRect" parent="Main Menu/Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -250.0
offset_right = 460.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.443137, 0.639216, 0.721569, 1)

[node name="BackButton" type="Button" parent="Main Menu/Credits"]
offset_left = 165.0
offset_top = 105.0
offset_right = 285.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="Title" type="Label" parent="Main Menu/Credits"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_top = 115.0
offset_right = 89.5
offset_bottom = 178.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Names" type="ColorRect" parent="Main Menu/Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -122.0
offset_right = 325.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="text" type="Label" parent="Main Menu/Credits/Names"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -130.5
offset_right = 250.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Carter Gruebel
Garrett Blake
Jacqueline Gracey
Brendan Trieu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Main Menu/Menu/SettingButton" to="Main Menu" method="_on_setting_button_button_down"]
[connection signal="button_down" from="Main Menu/Menu/Instructions" to="Main Menu" method="_on_instructions_button_down"]
[connection signal="button_down" from="Main Menu/Menu/Credits Button" to="Main Menu" method="_on_credits_button_down"]
[connection signal="button_down" from="Main Menu/Settings/BackButton" to="Main Menu" method="_on_back_button_button_down"]
[connection signal="mouse_entered" from="Main Menu/Settings/DiscussionTime/decrease/Area2D" to="Main Menu/Settings/DiscussionTime/decrease" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Settings/DiscussionTime/decrease/Area2D" to="Main Menu/Settings/DiscussionTime/decrease" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Main Menu/Settings/DiscussionTime/increase/Area2D" to="Main Menu/Settings/DiscussionTime/increase" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Settings/DiscussionTime/increase/Area2D" to="Main Menu/Settings/DiscussionTime/increase" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Main Menu/Settings/VotingTime/decrease/Area2D" to="Main Menu/Settings/VotingTime/decrease" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Settings/VotingTime/decrease/Area2D" to="Main Menu/Settings/VotingTime/decrease" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Main Menu/Settings/VotingTime/increase/Area2D" to="Main Menu/Settings/VotingTime/increase" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Settings/VotingTime/increase/Area2D" to="Main Menu/Settings/VotingTime/increase" method="_on_area_2d_mouse_exited"]
[connection signal="button_down" from="Main Menu/Settings/PlayButton" to="Main Menu" method="_on_play_button_button_down"]
[connection signal="button_down" from="Main Menu/Instructions/BackButton" to="Main Menu" method="_on_back_button_button_down"]
[connection signal="button_down" from="Main Menu/Credits/BackButton" to="Main Menu" method="_on_back_button_button_down"]
